SLT_Handler/Include/MMC/MMCWFP39.h

INT API latch(INT);
INT API set_encoder_ratiob(INT, INT);
INT API fset_encoder_ratiob(INT, INT);
INT API get_encoder_ratiob(INT, pINT);
INT API fget_encoder_ratiob(INT, pINT);
INT API set_analog_limit(INT, LONG);
INT API fset_analog_limit(INT, LONG);
INT API get_analog_limit(INT, pLONG);
INT API fget_analog_limit(INT, pLONG);
INT API set_position_lowpass_filter(INT, double);
INT API fset_position_lowpass_filter(INT, double);
INT API get_position_lowpass_filter(INT, double *);
INT API fget_position_lowpass_filter(INT, double *);
INT API set_velocity_lowpass_filter(INT, double);
INT API fset_velocity_lowpass_filter(INT, double);
INT API get_velocity_lowpass_filter(INT, double *);
INT API fget_velocity_lowpass_filter(INT, double *);
INT API set_position_notch_filter(INT, double);
INT API fset_position_notch_filter(INT, double);
INT API get_position_notch_filter(INT, pDOUBLE);
INT API fget_position_notch_filter(INT, pDOUBLE);
INT API set_velocity_notch_filter(INT, double);
INT API fset_velocity_notch_filter(INT, double);
INT API get_velocity_notch_filter(INT, pDOUBLE);
INT API fget_velocity_notch_filter(INT, pDOUBLE);
INT API set_mmc_parameter_init(INT);
INT API axis_all_status(INT, pINT, pLONG, pDOUBLE);
INT API set_sensor_auto_off(INT, INT);
INT API fset_sensor_auto_off(INT, INT);
INT API get_sensor_auto_off(INT, pINT);
INT API fget_sensor_auto_off(INT, pINT);
INT API get_spline_move_num(INT, pINT);
INT API set_servo_linear_flag(INT, INT);
INT API fset_servo_linear_flag(INT, INT);
INT API get_servo_linear_flag(INT, pINT);
INT API fget_servo_linear_flag(INT, pINT);
INT API spl_auto_line_move2ax(INT,INT,pDOUBLE, double, INT, INT);
INT API spl_auto_line_move3ax(INT,INT,INT,pDOUBLE, double, INT, INT);
INT API spl_auto_arc_move2ax(INT,INT, double, double, pDOUBLE, double, INT, INT, INT);
INT API spl_auto_arc_move3ax(INT,INT,INT, double, double, pDOUBLE, double, INT, INT, INT);
INT API spl_auto_arc_movenax(INT, pINT, double, double, pDOUBLE, double, INT, INT, INT);
INT API spl_auto_line_movenax(INT, pINT, pDOUBLE, double, INT, INT);
INT API set_analog_direction(INT, INT);
INT API fset_analog_direction(INT, INT);
INT API get_analog_direction(INT, pINT);
INT API fget_analog_direction(INT, pINT);
INT API position_compare(INT, INT, INT, INT, INT, INT, INT, INT, double, LONG);
INT API position_compare_enable(INT, INT);
INT API position_compare_index_clear(INT, INT);
INT API spl_arc_deg_move2(double , double, pDOUBLE, double, INT, INT);
INT API spl_arc_deg_move3(double , double, pDOUBLE, double, INT, INT);
INT API spl_arc_deg_move2ax(INT, INT, double, double, pDOUBLE, double, INT, INT);
INT API spl_arc_deg_move3ax(INT, INT, INT, double, double, pDOUBLE, double, INT, INT);
INT API spl_arc_deg_movenax(INT, pINT, double, double, pDOUBLE, double, INT, INT);
INT API spl_auto_arc_deg_move2ax(INT, INT, double, double, pDOUBLE, double, INT, INT, INT);
INT API spl_auto_arc_deg_move3ax(INT, INT, INT, double, double, pDOUBLE, double, INT, INT, INT);
INT API spl_auto_arc_deg_movenax(INT, pINT, double, double, pDOUBLE, double, INT, INT, INT);
INT API arc_3(double , double , double , pDOUBLE);
INT API arc_3ax(INT , INT, INT, double, double, double, pDOUBLE, double, INT);
INT API set_encoder_filter_num(INT, INT);
INT API fset_encoder_filter_num(INT, INT);
INT API get_encoder_filter_num(INT, pINT);
INT API fget_encoder_filter_num(INT, pINT);
INT	API	get_mmc_init_chkx();
INT	API	set_mmc_init_chkx(INT, INT);
INT API spl_line_move1(pDOUBLE, double, INT);
INT API spl_line_move1ax(INT, pDOUBLE, double, INT);
INT API spl_auto_line_move1ax(INT, pDOUBLE, double, INT, INT);
INT API position_compare_interval(INT dir, INT ax, INT bitNo, double startpos,double limitpos, LONG interval,LONG time);
INT API set_control_timer_ax(INT ax, double time);
INT API fset_control_timer_ax(INT ax, double time);
INT API get_control_timer_ax(INT ax, pDOUBLE time);
INT API fget_control_timer_ax(INT ax, pDOUBLE time);
INT API position_io_onoff(INT pos_num, INT bitNo, INT ax, double pos, INT encflag);
INT API position_io_allclear(INT ax);
INT API position_io_clear(INT ax, INT pos_num);