SLT_Handler/Include/MMC/MMCWFP39.pas


 Function set_encoder_ratiob ( ax : Smallint;  ratiob : Smallint) : Smallint               ;stdcall;   external    'MMCWFP39.DLL';
 Function fset_encoder_ratiob  ( ax : Smallint;  ratiob : Smallint) : Smallint             ;stdcall;   external    'MMCWFP39.DLL';
 Function get_encoder_ratiob  ( ax : Smallint; iratiob : pointer) : Smallint                    ;stdcall;   external    'MMCWFP39.DLL';
 Function fget_encoder_ratiob  ( ax : Smallint; iratiob : pointer) : Smallint                   ;stdcall;   external    'MMCWFP39.DLL';

 Function set_analog_limit  ( ax : Smallint;  voltage : Longint) : Smallint                   ;stdcall;   external    'MMCWFP39.DLL';
 Function fset_analog_limit  ( ax : Smallint;  voltage : Longint) : Smallint                  ;stdcall;   external    'MMCWFP39.DLL';
 Function get_analog_limit  ( ax : Smallint; lvoltage : pointer) : Smallint                         ;stdcall;   external    'MMCWFP39.DLL';
 Function fget_analog_limit ( ax : Smallint; lvoltage : pointer) : Smallint                         ;stdcall;   external    'MMCWFP39.DLL';

 Function set_position_lowpass_filter  ( ax : Smallint;  hz : Double) : Smallint          ;stdcall;   external    'MMCWFP39.DLL';
 Function fset_position_lowpass_filter  ( ax : Smallint;  hz : Double) : Smallint          ;stdcall;   external    'MMCWFP39.DLL';
 Function get_position_lowpass_filter ( ax : Smallint; dhz : pointer) : Smallint                  ;stdcall;   external    'MMCWFP39.DLL';
 Function fget_position_lowpass_filter ( ax : Smallint; dhz : pointer) : Smallint                 ;stdcall;   external    'MMCWFP39.DLL';

 Function set_velocity_lowpass_filter  ( ax : Smallint;  hz : Double) : Smallint            ;stdcall;   external    'MMCWFP39.DLL';
 Function fset_velocity_lowpass_filter  ( ax : Smallint;  hz : Double) : Smallint           ;stdcall;   external    'MMCWFP39.DLL';
 Function get_velocity_lowpass_filter  ( ax : Smallint; dhz : pointer) : Smallint                 ;stdcall;   external    'MMCWFP39.DLL';
 Function fget_velocity_lowpass_filter  ( ax : Smallint; dhz : pointer) : Smallint                ;stdcall;   external    'MMCWFP39.DLL';

 Function set_position_notch_filter ( ax : Smallint;  hz : Double) : Smallint              ;stdcall;   external    'MMCWFP39.DLL';
 Function fset_position_notch_filter  ( ax : Smallint;  hz : Double) : Smallint            ;stdcall;   external    'MMCWFP39.DLL';
 Function get_position_notch_filter ( ax : Smallint; dhz : pointer) : Smallint                     ;stdcall;   external    'MMCWFP39.DLL';
 Function fget_position_notch_filter ( ax : Smallint; dhz : pointer) : Smallint                    ;stdcall;   external    'MMCWFP39.DLL';

 Function set_velocity_notch_filter  ( ax : Smallint;  hz : Double) : Smallint             ;stdcall;   external    'MMCWFP39.DLL';
 Function fset_velocity_notch_filter  ( ax : Smallint;  hz : Double) : Smallint            ;stdcall;   external    'MMCWFP39.DLL';
 Function get_velocity_notch_filter  ( ax : Smallint; dhz : pointer) : Smallint                    ;stdcall;   external    'MMCWFP39.DLL';
 Function fget_velocity_notch_filter  ( ax : Smallint; dhz : pointer) : Smallint                   ;stdcall;   external    'MMCWFP39.DLL';

 Function set_mmc_parameter_init ( ax : Smallint) : Smallint                                      ;stdcall;   external    'MMCWFP39.DLL';
 Function axis_all_status(ax:Smallint ; arriState: pointer ; lState:pointer; arrdState:pointer) : Smallint     ;   stdcall;   external    'MMCWFP39.DLL';

 Function set_sensor_auto_off(ax:Smallint; off:Smallint) : Smallint;      stdcall;   external    'MMCWFP39.DLL';
 Function fset_sensor_auto_off(ax:Smallint; off:Smallint) : Smallint;       stdcall;   external    'MMCWFP39.DLL';
 Function get_sensor_auto_off(ax:Smallint; ioff:pointer) : Smallint;     stdcall;   external    'MMCWFP39.DLL';
 Function fget_sensor_auto_off(ax:Smallint; ioff:pointer) : Smallint;      stdcall;   external    'MMCWFP39.DLL';
 Function get_spline_move_num(bdNum:Smallint; inum:pointer) : Smallint;      stdcall;   external    'MMCWFP39.DLL';

 Function set_servo_linear_flag(ax:Smallint; flag:Smallint) : Smallint;      stdcall;   external    'MMCWFP39.DLL';
 Function fset_servo_linear_flag(ax:Smallint; flag:Smallint) : Smallint;      stdcall;   external    'MMCWFP39.DLL';
 Function get_servo_linear_flag(ax:Smallint; iflag:pointer) : Smallint;      stdcall;   external    'MMCWFP39.DLL';
 Function fget_servo_linear_flag(ax:Smallint; iflag:pointer) : Smallint;     stdcall;   external    'MMCWFP39.DLL';

 Function spl_auto_line_move2ax(ax1:Smallint;ax2:Smallint;arrdPos:pointer; vel:Double; acc:Smallint; offFlag:Smallint) : Smallint;        stdcall;   external    'MMCWFP39.DLL';
 Function spl_auto_line_move3ax(ax1:Smallint;ax2:Smallint;ax3:Smallint;arrdPos:pointer; vel:Double; acc:Smallint; offFlag:Smallint) : Smallint;        stdcall;   external    'MMCWFP39.DLL';
 Function spl_auto_arc_move2ax(ax1:Smallint;ax2:Smallint; cx:Double; cy:Double; arrdPos: pointer; vel:Double; acc:Smallint; dir:Smallint; offFlag:Smallint) : Smallint;      stdcall;   external    'MMCWFP39.DLL';
 Function spl_auto_arc_move3ax(ax1:Smallint;ax2:Smallint;ax3:Smallint; cx:Double; cy:Double; arrdPos: pointer; vel:Double; acc:Smallint; dir:Smallint; offFlag:Smallint) : Smallint;      stdcall;   external    'MMCWFP39.DLL';
 Function spl_auto_arc_movenax(axNum:Smallint; arriax:pointer; cx:Double; cy:Double; arrdPos: pointer; vel:Double; acc:Smallint; dir:Smallint; offFlag:Smallint) : Smallint;       stdcall;   external    'MMCWFP39.DLL';
 Function spl_auto_line_movenax(axNum:Smallint; arriax:pointer; arrdPos:Double; vel:Double; acc:Smallint; offFlag:Smallint) : Smallint;         stdcall;   external    'MMCWFP39.DLL';

 Function set_analog_direction ( ax : Smallint;  dir : Smallint) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function fset_analog_direction  ( ax : Smallint;  dir : Smallint) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function get_analog_direction  ( ax : Smallint; pidir : pointer) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function fget_analog_direction  ( ax : Smallint; pidir : pointer) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';


 Function position_compare  ( index_sel : Smallint;  index_num : Smallint;  bitNo : Smallint;  ax : Smallint;  latch : Smallint;  nfunction : Smallint;  pos : Double ;  time : Longint) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function position_compare_enable  ( bn : Smallint;  flag : Smallint) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function position_compare_index_clear  ( bn : Smallint;  index : Smallint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';

 Function spl_arc_deg_move2  ( x_center : Double;  y_center : Double; pdpoint : pointer;  vel : Double;  acc : Smallint;  cdir : Smallint) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function spl_arc_deg_move3  ( x_center : Double;  y_center : Double; pdpoint : pointer;  vel : Double;  acc : Smallint;  cdir : Smallint) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';

 Function spl_arc_deg_move2ax  ( ax1 : Smallint;  ax2 : Smallint; x_center : Double;  y_center : Double; pdpoint : pointer;  vel : Double;  acc : Smallint;  cdir : Smallint) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function spl_arc_deg_move3ax  ( ax1 : Smallint;  ax2 : Smallint;  ax3 : Smallint; x_center : Double;  y_center : Double; pdpoint : pointer;  vel : Double;  acc : Smallint;  cdir : Smallint) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function spl_arc_deg_movenax  ( nlen : Smallint; piax : pointer; x_center : Double;  y_center : Double; pdpoint : pointer;  vel : Double;  acc : Smallint;  cdir : Smallint) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';

 Function spl_auto_arc_deg_move2ax  ( ax1 : Smallint;  ax2 : Smallint; x_center : Double;  y_center : Double; pdpoint : pointer;  vel : Double;  acc : Smallint;  cdir : Smallint;  auto_flag : Smallint) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function spl_auto_arc_deg_move3ax  ( ax1 : Smallint;  ax2 : Smallint;  ax3 : Smallint; x_center : Double;  y_center : Double; pdpoint : pointer;  vel : Double;  acc : Smallint;  cdir : Smallint;  auto_flag : Smallint) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function spl_auto_arc_deg_movenax  ( nlen : Smallint; piax : pointer; x_center : Double;  y_center : Double; pdpoint : pointer;  vel : Double;  acc : Smallint;  cdir : Smallint;  auto_flag : Smallint) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';

 Function arc_3  (x_center : Double;  y_center : Double;  angle : Double; pos : Double) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function arc_3ax  (ax1 : Smallint;  ax2 : Smallint;  ax3 : Smallint; x_center : Double;  y_center : Double;  angle : Double; pdpos : pointer;  vel : Double;  acc : Smallint) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';

 Function set_encoder_filter_num  (ax : Smallint;  fn : Smallint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function fset_encoder_filter_num  (ax : Smallint; fn : Smallint) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function get_encoder_filter_num  (ax : Smallint; pifn : pointer) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function fget_encoder_filter_num  (ax : Smallint; pifn : pointer) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function get_mmc_init_chkx  () : Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function set_mmc_init_chkx  (bn : Smallint;  val : Smallint) : Smallint ;     stdcall;   external    'MMCWFP39.DLL';

 Function spl_line_move1  (arrdPos:pointer; vel:Double; acc:Smallint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function spl_line_move1ax (ax:Smallint;arrdPos:pointer; vel:Double; acc:Smallint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function spl_auto_line_move1ax  (ax:Smallint;arrdPos:pointer; vel:Double; acc:Smallint; offFlag:Smallint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';

 Function position_compare_interval ( dir:Smallint;  ax:Smallint;  bitNo:Smallint;  startpos:Double; limitpos:Double;  interval: Longint; time : Longint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function set_control_timer_ax ( ax:Smallint;  time :Double): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function fset_control_timer_ax ( ax:Smallint;  time :Double): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function get_control_timer_ax ( ax:Smallint;  pdtime:pointer): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function fget_control_timer_ax ( ax:Smallint;  pdtime:pointer): Smallint ;     stdcall;   external    'MMCWFP39.DLL';

 Function position_io_onoff ( pos_num:Smallint;  bitNo:Smallint;  ax:Smallint;  pos :Double;  encflag:Smallint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function position_io_allclear ( ax:Smallint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function position_io_clear ( ax:Smallint;  pos_num:Smallint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
